--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,7 +1,7 @@
 .container {
   max-width: 120rem;
   margin: 8rem auto;
-  background-color: var(--color-Grey-light-2);
+  background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
 
   min-height: 50rem;
@@ -10,7 +10,7 @@
 .header {
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-Grey-light-2);
+  border-bottom: var(--color-grey-light-2);
 }
 
 .content {
@@ -18,7 +18,7 @@
 }
 
 .sidebar {
-  background-color: var(--color-Grey-dark-1);
+  background-color: var(--color-grey-dark-1);
 
   flex: 0 0 18%;
 }
