--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
   --color-primary: #eb2f64;
   --color-primary-light: #ff3366;
   --color-primary-dark: #ba265d;
-  --color-Grey-light-1: #faf9f9;
-  --color-Grey-light-2: #f4f2f2;
-  --color-Grey-light-3: #f0eeee;
-  --Grey-light-4: #ccc;
-  --color-Grey-dark-1: #333;
-  --color-Grey-dark-2: #777;
-  --color-Grey-dark-3: #999;
+  --color-grey-light-1: #faf9f9;
+  --color-grey-light-2: #f4f2f2;
+  --color-grey-light-3: #f0eeee;
+  --color-grey-light-4: #ccc;
+  --color-grey-dark-1: #333;
+  --color-grey-dark-2: #777;
+  --color-grey-dark-3: #999;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3); }
 
 * {
@@ -28,7 +28,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  color: var(--color-Grey-dark-2);
+  color: var(--color-grey-dark-2);
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
@@ -37,22 +37,37 @@ body {
 .container {
   max-width: 120rem;
   margin: 8rem auto;
-  background-color: var(--color-Grey-light-2);
+  background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
   min-height: 50rem; }
 
 .header {
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-Grey-light-2); }
+  border-bottom: var(--color-grey-light-2); }
 
 .content {
   display: flex; }
 
 .sidebar {
-  background-color: var(--color-Grey-dark-1);
+  background-color: var(--color-grey-dark-1);
   flex: 0 0 18%; }
 
 .hotel-view {
   background-color: orangered;
   flex: 1; }
+
+.logo {
+  height: 3.25rem; }
+
+.search__icon {
+  height: 2rem;
+  width: 2rem; }
+
+.user-nav__icon {
+  height: 2.25rem;
+  width: 2.25rem; }
+
+.user-nav__user-photo {
+  height: 3.75rem;
+  border-radius: 50%; }
