--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -116,31 +116,64 @@
     border-radius: 50%;
     margin-right: 1rem;
   }
-
 }
 
 //////////////////////////////////////////////////////////////////////////////
 //side nav
 
-.side-nav{
-  &__item{
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
 
+  &__item {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
   }
 
-  &__link{
-
+  &__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    // transform-origin: bottom;  baes mishe ke animation az koja shoro she in yani az paiin shoro she defaultesh az vasate
+    transition: transform 1s;
   }
 
-  &__icon{
+  &__item:hover::before {
+    transform: scaleY(1);
+  }
+
+  &__link:link,
+  &__link:visited {
+    color: var(--color-grey-light-2);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+
+    display: flex;
+    align-items: center;
+  }
+
+  &__icon {
     width: 1.75rem;
     height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor;
   }
 }
 
-
 //////////////////////////////////////////////////////////////////////////////
 //legal text
-.legal{
+.legal {
   font-size: 1.2rem;
   color: var(--color-grey-light-4);
   text-align: center;
