--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -144,11 +144,16 @@
     background-color: var(--color-primary);
     transform: scaleY(0);
     // transform-origin: bottom;  baes mishe ke animation az koja shoro she in yani az paiin shoro she defaultesh az vasate
-    transition: transform 1s;
+    transition: transform 0.2s, width 0.4s cubic-bezier(1,0,0,1) 0.2s;  // ye trans dige avali zaman dovom delay
   }
 
-  &__item:hover::before {
+  &__item:hover::before,&__item--active::before {
     transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before{
+    background-color: var(--color-primary-light);
   }
 
   &__link:link,
@@ -158,6 +163,8 @@
     text-transform: uppercase;
     display: block;
     padding: 1.5rem 3rem;
+    position: relative;
+    z-index: 10;
 
     display: flex;
     align-items: center;
