--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -144,15 +144,16 @@
     background-color: var(--color-primary);
     transform: scaleY(0);
     // transform-origin: bottom;  baes mishe ke animation az koja shoro she in yani az paiin shoro she defaultesh az vasate
-    transition: transform 0.2s, width 0.4s cubic-bezier(1,0,0,1) 0.2s;  // ye trans dige avali zaman dovom delay
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s; // ye trans dige avali zaman dovom delay
   }
 
-  &__item:hover::before,&__item--active::before {
+  &__item:hover::before,
+  &__item--active::before {
     transform: scaleY(1);
     width: 100%;
   }
 
-  &__item:active::before{
+  &__item:active::before {
     background-color: var(--color-primary-light);
   }
 
@@ -185,4 +186,51 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+}
+
+//////////////////////////////////////////////////////////////////////////////
+//galley
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
+
+//////////////////////////////////////////////////////////////////////////////
+//hotel overview
+.overview {
+  display: flex;
+  
+
+  &__heading {
+
+  }
+
+  &__stars {
+    margin-right: auto;
+    
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__location {
+    
+  }
+
+  &__rating {
+  }
+
+  &__rating-average {
+  }
+
+  &__rating-count {
+  }
 }
