--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -47,7 +47,6 @@
 }
 
 .description {
-  
   background-color: #fff;
   box-shadow: var(--shadow-light);
   padding: 3rem;
@@ -57,4 +56,8 @@
 
 .user-reviews {
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
