--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -16,6 +16,12 @@
   align-items: center;
   justify-content: center;
 
+  @media only screen and (max-width: $bg-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+  }
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -108,8 +114,7 @@
     align-items: center;
   }
 
-  &__user {
-  }
+
 
   &__user-photo {
     height: 3.75rem;
@@ -126,11 +131,24 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bg-medium) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+
+      @media only screen and (max-width: $bg-medium) {
+        margin: 0;
+      }
+    }
+
+    @media only screen and (max-width: $bg-medium) {
+      flex: 1;
     }
   }
 
@@ -169,6 +187,16 @@
 
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bg-medium) {
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    @media only screen and (max-width: $bg-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
+    }
   }
 
   &__icon {
@@ -176,6 +204,13 @@
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;
+
+    @media only screen and (max-width: $bg-small) {
+      margin-right: 0;
+      margin-bottom: 0.7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -186,6 +221,10 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media only screen and (max-width: $bg-medium) {
+    display: none;
+  }
 }
 
 //////////////////////////////////////////////////////////////////////////////
@@ -212,6 +251,11 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bg-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
 
   &__stars {
@@ -247,6 +291,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media only screen and (max-width: $bg-small) {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+
+      @media only screen and (max-width: $bg-small) {
+        font-size: 0.5rem;
+      }
+    }
   }
 
   &__rating-average {
@@ -340,16 +393,19 @@
     margin-right: 0.7rem;
 
     //older browsers
-    // background-image: url(../img/chevron-thin-right.svg);
-    // background-size: cover;
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
 
     //newer browsers -masks
-    background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      background-color: var(--color-primary);
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
 
-    mask-image: url(../img/chevron-thin-right.svg);
-    mask-size: cover;
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      background-image: none;
+    }
   }
 }
 
@@ -366,6 +422,7 @@
   }
 
   &__friends {
+    display: flex;
   }
 
   &__photo {
@@ -376,7 +433,7 @@
     border: 3px solid #fff;
 
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
@@ -390,6 +447,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bg-medium) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -451,6 +513,10 @@
   padding: 3.5rem 0;
   text-align: center;
 
+  @media only screen and (max-width: $bg-medium) {
+    padding: 2.5rem 0;
+  }
+
   &__book-now {
     font-size: 2rem;
     font-weight: 300;
@@ -510,7 +576,7 @@
     top: 0;
   }
 
-  &:focus{
+  &:focus {
     outline: none;
     animation: pulsate 1s infinite;
   }
